[metadata]
name = dsw-sdk
version = 0.9.3
author = Jakub Drahoš
author_email = jakubdrahosJD@gmail.com
description = Software development kit for the Data Stewardship Wizard.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ds-wizard/dsw-sdk
project_urls =
    Bug Tracker = https://github.com/ds-wizard/dsw-sdk/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyjwt
    pyyaml
    requests
python_requires = >=3.7

[options.packages.find]
where = src

[mypy]
python_version = 3.7
warn_unused_ignores = True
warn_unreachable = True
show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True
disable_error_code = str-bytes-safe,import
follow_imports = normal

[flake8]
max-complexity = 10
max-line-length = 79
